fix cursor bubble on mobile

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ main {
   border: 2px solid var(--white);
   border-radius: 50%;
   position: absolute;
-  transform: translate(-50%, -50%);
+  transform: translate(-150%, -150%);
   pointer-events: none;
   transition: all 0.5s ease-in-out;
   transition-property: background, transform;
